src/objects/wbsendit__Journey_Email__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Bounced__c</fullName>
        <label>Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Clicked__c</fullName>
        <label>Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Email Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__Journey__c</fullName>
        <label>Journey</label>
        <referenceTo>wbsendit__Journey__c</referenceTo>
        <relationshipLabel>Journey Emails</relationshipLabel>
        <relationshipName>Journey_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Bounced_Count__c</fullName>
        <label>Last Bounced Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Click_Count__c</fullName>
        <label>Last Click Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Open_Count__c</fullName>
        <label>Last Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Sent_Count__c</fullName>
        <label>Last Sent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Unsubscribe_Count__c</fullName>
        <label>Last Unsubscribe Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Opened__c</fullName>
        <label>Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Sent__c</fullName>
        <label>Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Unique_Opened__c</fullName>
        <label>Unique Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Unsubscribed__c</fullName>
        <label>Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Journey Email</label>
    <nameField>
        <label>Journey Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>